core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/mapjoin.yf
---
name: mapjoin
graphs:
  start:
    - type: MapJoin
      list: [A,B]
      mapTarget: X
      keys:
        key: keyfromx

    - type: StringContains
      regex: ""
      content: "{keyfromx}" # content :: String

  X:
    - type: Echo
      put: key
      value: "1"


